# Toxcord

./: .gitignore  .gitmodules  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: mingw64-toolchain.cmake
.github/workflows/: build-arch.yml  build-fedora.yml  build-linux.yml  build-ubuntu.yml  build-windows.yml
apps/desktop/: index.html  package.json  tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/audio/: capture.rs  mixer.rs  mod.rs  playback.rs
apps/desktop/src-tauri/src/commands/: auth.rs  calls.rs  friends.rs  guilds.rs  messaging.rs  mod.rs
apps/desktop/src-tauri/src/db/: message_store.rs  mod.rs  schema.rs
apps/desktop/src-tauri/src/managers/: av_manager.rs  guild_manager.rs  i2p_manager.rs  mod.rs  tox_manager.rs
apps/desktop/src-tauri/src/video/: capture.rs  convert.rs  mod.rs  screen.rs
apps/desktop/src/api/: calls.ts  tox.ts
apps/desktop/src/components/call/: CallControls.tsx  CallOverlay.tsx  CallPanel.tsx  DevicePicker.tsx  VoiceCallUI.tsx
apps/desktop/src/components/guild/: GuildCreateModal.tsx  InviteModal.tsx
apps/desktop/src/components/layout/: ChannelSidebar.tsx  MainContent.tsx  MemberSidebar.tsx  ServerSidebar.tsx
apps/desktop/src/components/video/: FullscreenVideoModal.tsx  LocalPreview.tsx  RemoteVideo.tsx  VideoCallUI.tsx  VideoCanvas.tsx  index.ts
apps/desktop/src/hooks/: useCallEvents.ts  useToxEvents.ts
apps/desktop/src/pages/: DMPage.tsx  DmGroupPage.tsx  FriendsPage.tsx  GuildPage.tsx  HomePage.tsx  LoginPage.tsx  SettingsPage.tsx
apps/desktop/src/stores/: authStore.ts  callStore.ts  channelMessageStore.ts  friendStore.ts  guildStore.ts  messageStore.ts  navigationStore.ts
crates/toxcord-protocol/: Cargo.toml
crates/toxcord-protocol/src/: codec.rs  packets.rs
crates/toxcord-tox/: Cargo.toml
crates/toxcord-tox-sys/: Cargo.toml  build.rs  wrapper.h
crates/toxcord-tox-sys/src/: lib.rs
crates/toxcord-tox/src/: av.rs  av_callbacks.rs  av_types.rs  callbacks.rs  error.rs  groups.rs  lib.rs  tox.rs  types.rs
