[workspace]
resolver = "2"
members = [
    "crates/toxcord-tox-sys",
    "crates/toxcord-tox",
    "crates/toxcord-protocol",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/toxcord/toxcord"

[workspace.dependencies]
toxcord-tox-sys = { path = "crates/toxcord-tox-sys" }
toxcord-tox = { path = "crates/toxcord-tox" }
toxcord-protocol = { path = "crates/toxcord-protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
chrono = { version = "0.4", features = ["serde"] }
